--- a/src/main/resources/ucf/assignments/ListController.fxml
+++ b/src/main/resources/ucf/assignments/ListController.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="850.0" prefWidth="700.0" style="-fx-background-color: #ffffff;" stylesheets="@layout.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ucf.assignments.ListController">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="850.0" prefWidth="800.0" style="-fx-background-color: #ffffff;" stylesheets="@layout.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ucf.assignments.ListController">
   <columnConstraints>
       <ColumnConstraints maxWidth="91.0" minWidth="10.0" prefWidth="88.0" />
     <ColumnConstraints maxWidth="105.0" minWidth="10.0" prefWidth="83.0" />
@@ -49,7 +49,7 @@
             <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
          </GridPane.margin>
       </TextArea>
-      <Button alignment="CENTER" contentDisplay="CENTER" lineSpacing="2.0" mnemonicParsing="false" onAction="#incompListValue" text="Incomplete List" textAlignment="CENTER" GridPane.columnIndex="7" GridPane.halignment="CENTER" GridPane.rowIndex="10" GridPane.valignment="TOP">
+      <Button alignment="CENTER" contentDisplay="CENTER" lineSpacing="2.0" mnemonicParsing="false" onAction="#incompListValue" prefHeight="31.0" prefWidth="176.0" text="Not Comp" textAlignment="CENTER" GridPane.columnIndex="7" GridPane.halignment="CENTER" GridPane.rowIndex="10" GridPane.valignment="TOP">
          <padding>
             <Insets bottom="4.0" left="4.0" right="4.0" top="4.0" />
          </padding>
@@ -62,7 +62,7 @@
             <Insets bottom="4.0" left="4.0" right="4.0" top="4.0" />
          </padding>
       </Button>
-      <Button alignment="CENTER" contentDisplay="CENTER" lineSpacing="2.0" mnemonicParsing="false" onAction="#compListValue" text="Complete List" textAlignment="CENTER" GridPane.columnIndex="7" GridPane.halignment="CENTER" GridPane.rowIndex="9" GridPane.valignment="BOTTOM">
+      <Button alignment="CENTER" contentDisplay="CENTER" lineSpacing="2.0" mnemonicParsing="false" onAction="#compListValue" prefHeight="31.0" prefWidth="119.0" text="Complete" textAlignment="CENTER" GridPane.columnIndex="7" GridPane.halignment="CENTER" GridPane.rowIndex="9" GridPane.valignment="BOTTOM">
          <padding>
             <Insets bottom="4.0" left="4.0" right="4.0" top="4.0" />
          </padding>
